desafio 3, falta 2 parte

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,9 @@
 @import "~bootstrap/scss/bootstrap";
-.header
-{background-color: blue;
-font-size: 12px;}
+
+.Cart{
+  width: 60px;
+  border-radius: 44px;
+
+}
+
+
